--- a/CSS/home_style.css
+++ b/CSS/home_style.css
@@ -4,6 +4,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 html {
@@ -15,63 +16,39 @@ html {
 }
 
 body{
-  width: 100%;
-  height: auto;
-  /* background-color: hsl(0, 0%, 95%); */
-  background-color: #FFFFFF;
+	width: 100%;
+	height: auto;
+	/* background-color: hsl(0, 0%, 95%); */
+	background-color: #FFFFFF;
 }
+
+:root {
+	--dark-green: #00312580;
+	--light-green: #007565a4;
+	--superlight-green: #a6fff249;
+}
+
+.center {
+	text-align: center;
+	vertical-align: middle;
+}
+
+.cursor {
+	cursor: pointer;
+}
+
+@font-face {
+	font-family: 'JinWen';
+	font-style: normal;
+  	font-weight: 400;
+	src: url('../files/fonts/HuaKangJinWenTiW30-1.woff2') format('woff2');
+  }
 
 /*--------------------------------------------------------------
 	Main Area
 --------------------------------------------------------------*/
 .main-area {
 	margin: 0 auto;
-}
-
-/*--------------------------------------------------------------
-	Top Navigation Styles
---------------------------------------------------------------*/
-.home-nav {
-	width: 100%;
-	height: 50px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	/* opacity: 0.8; */
-	background-color: #FFFFFF;
-}
-
-.home-nav ul {
-
-}
-
-.home-nav ul li {
-	list-style: none;
-	display: block;
-	float: left;
-	line-height: 50px;
-}
-
-.home-nav ul li img {
-	width: auto;
-	height: 50px;
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
-.home-nav ul li a {
-	padding: 0px 20px 0px 20px;
-	display: block;
-	text-decoration: none;
-	font-size: 20px;
-	font-family: "Merienda";
-	color: hsla(240, 21.2%, 66.7%, 50%);;
-}
-
-.home-nav ul li a:hover {
-	color: hsla(240, 21.2%, 66.7%, 100%);;
 }
 
 /*--------------------------------------------------------------
@@ -82,11 +59,11 @@ body{
     position: relative;
     display: table;
     margin: auto;
-    margin-top: 50px;
-	width: 90%;
-	height: -webkit-calc(100vh - 50px);
+    margin-top: 0;
+	width: 100%;
+	height: -webkit-calc(60vh);
 
-    background-image: url(../images/homeImages/topBanner.jpg);
+    background-image: url(../files/images/banner_top.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: overlay;
@@ -99,8 +76,8 @@ body{
     width: auto;
     height: auto;
     position: absolute;
-    left: 25%;
-    top: 75%;
+    left: 20%;
+    top: 55%;
     transform: translate(-50%, -50%);
 
     /* border-style: solid; */
@@ -112,8 +89,7 @@ body{
 .top-banner-text-wrapper h1 {
 	width: fit-content;
     height: fit-content;
-
-    color: #3C3C65;
+    color: white;
     font-size: 5vw;
     font-family: "FZShuTi";
 	/* background-color: hsla(250, 65%, 90%, 30%); */
@@ -122,8 +98,7 @@ body{
 .top-banner-text-wrapper h2 {
     width: fit-content;
     height: fit-content;
-
-    color: #3C3C65;
+    color: white;
     font-size: 3vw;
     font-family: "Merienda";
 	/* background-color: hsla(100, 65%, 90%, 30%); */
@@ -132,10 +107,20 @@ body{
 .top-banner-text-wrapper h3 {
     width: fit-content;
     height: fit-content;
+    color: white;
+    font-size: 1.5vw;
+	font-family: "Merienda";
+	text-align: left;
+	/* background-color: hsla(150, 65%, 90%, 30%); */
+}
 
-    color: #3C3C65;
+.top-banner-text-wrapper h4 {
+    width: fit-content;
+    height: fit-content;
+    color: white;
     font-size: 1vw;
-    font-family: "Merienda";
+	font-family: "Merienda";
+	text-align: left;
 	/* background-color: hsla(150, 65%, 90%, 30%); */
 }
 
@@ -174,215 +159,349 @@ body{
 }
 
 /*--------------------------------------------------------------
-	Story
+	Projects Container Styles
 --------------------------------------------------------------*/
-.story {
-	width: 100%;
+.projects-container {
+	margin: 0 auto;
+	max-width: 80%;
 	height: 100vh;
-}
-
-.story h1 {
 	padding-top: 5%;
-	font-size: 3em;
-	font-family: "Merienda";
-	text-align: center;
-}
-
-.story h2 {
-	padding-top: 1%;
-	padding-bottom: 5%;
-	font-size: 2em;
-	font-family: "FZShuTi";
-	text-align: center;
-}
-
-.story p {
-	padding-bottom: 5%;
-	font-size: 1.2em;
-}
-
-.story-arrow {
-	width: 30px;
-	height: 30px;
-	position: relative;
-	bottom: -30px;
-	left: 50%;
 	display: inline-block;
 }
 
-.story-arrow:before,
-.story-arrow:after {
-	background-color: #000000;
-	content: "";
-	height: 2px;
-	left: 50%;
-	margin-left: -11px;
-	margin-top: -1px;
-	position: absolute;
-	top: 50%;
-	width: 22px;
-}
-
-.story-arrow:before {
-	-webkit-transform: translateX(-7px) rotate(45deg);
-	-moz-transform: translateX(-7px) rotate(45deg);
-	transform: translateX(-7px) rotate(45deg);
-}
-
-.story-arrow:after {
-	-webkit-transform: translateX(7px) rotate(-45deg);
-	-moz-transform: translateX(7px) rotate(-45deg);
-	transform: translateX(7px) rotate(-45deg);
-}
-
-/*--------------------------------------------------------------
-	Introduction
---------------------------------------------------------------*/
-.introduction {
-	margin: 0 auto;
-	max-width: 55em;
-	height: 40vh;
-    font-family: "Merienda";
-}
-
-/*--------------------------------------------------------------
-	Reason
---------------------------------------------------------------*/
-.reason {
-	margin: 0 auto;
-	max-width: 55em;
-	height: 50vh;
-	background: #B51C35;
-	color: #FFFFFF;
-	border-radius: 20px;
-    font-family: "Merienda";
-}
-
-.reason p {
-	margin-left: 5%;
-	margin-right: 5%;
-}
-
-/*--------------------------------------------------------------
-	Career Interests Banner
---------------------------------------------------------------*/
-.career-banner {
-    padding: 0.5em 2em;
-    padding-bottom: 1.5em;
-    background: #B51C35;
-    text-align: left;
-    font-family: "Merienda";
-}
-
-.career-banner h1 {
-    padding-top: 2%;
-    font-family: "Merienda";
-    font-size: 45px;
-    color: #FFFFFF;
-    text-align: center;
-}
-
-.career-banner h2 {
-    padding-bottom: 2%;
-    font-family: "FZShuTi";
-    font-size: 30px;
-    color: #FFFFFF;
-    text-align: center;
-}
-
-.career-banner center {
-    /* padding: 0 1em; */
-	color: #FFFFFF;
-    font-size: 18px;
-}
-
-/*--------------------------------------------------------------
-	Projects Showcases
---------------------------------------------------------------*/
-.projects-showcases {
-	margin: 2% auto;
-	max-width: 75em;
-}
-
-.projects-showcases h1 {
+.projects-container h1 {
 	font-family: "Merienda";
     font-size: 35px;
 	text-align: center;
 }
 
-.projects-showcases h2 {
+.projects-container h2 {
 	margin-bottom: 2%;
 	font-family: "FZShuTi";
     font-size: 25px;
 	text-align: center;
 }
-
-.projects-showcases ul li {
-	max-width: 25em;
+  
+.projects-container ul li {
+	margin: 2%;
+	width: 20%;
 	list-style: none;
 	display: inline-block;
+	background-color: #FFFFFF;
+	/* border: 5px solid #FFFFFF;
+	border-radius: 10px; */
 	float: left;
-	/* line-height: 70px; */
 }
 
-.projects-showcases figure {
+.demo-img {
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	float: left;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	text-align: center;
+	vertical-align: middle;
+	position: relative;
+
+	border-radius: 50%;
+	border: 5px solid var(--dark-green);
+
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	overflow: hidden;
+}
+
+.demo-img:after {
+	position: absolute;
+	content: " ";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
+	background-color: var(--dark-green);
+	display: none;
+}
+
+.demo-img:hover:after {
 	display: block;
-  margin-bottom: 1em;
-  padding-bottom: 2em;
-	text-align: center;
+	cursor: pointer;
 }
 
-.projects-showcases figure img {
-  max-width: 75%;
-	margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 2em;
+.demo-img p {
+	font-family: "FZShuTi";
+	font-size: 20px;
+	color: #FFFFFF;
+	visibility: hidden;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
-.projects-showcases figure video {
-  max-width: 100%;
-	margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 1.5em;
-}
-
-.projects-showcases figcaption {
-	text-align: center;
-}
-
-.projects-showcases figcaption p {
-	margin-bottom: 5%;
+.demo-img:hover p {
+	visibility: visible;
+	z-index: 2;
+	cursor: pointer;
 }
 
 /*--------------------------------------------------------------
-	Content Button
+Modal box styles
 --------------------------------------------------------------*/
-.content-button {
-	padding: .5em 1em;
-	border: 3px solid #B51C35;
-	border-radius: 10px;
-	font-weight: 600;
+/* The Modal (background) */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
 }
 
-a.content-button {
+/* Modal Content/Box */
+.modal-content {
+	background-color: #FEFEFE;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	padding-left: 8%;
+	padding-right: 8%;
+	border: 1px solid #888;
+	width: 70%;
+}
+
+.modal-content h1 {
+	font-family: "Merienda";
+    font-size: 2.5vw;
+	/* background-image: linear-gradient(to right, rgba(92, 192, 255, 0.4) , white); */
+}
+
+.modal-content h2 {
+	font-family: "Merienda";
+    font-size: 1.5vw;
+	/* background-image: linear-gradient(to right, rgba(92, 192, 255, 0.4) , white); */
+}
+
+.modal-content h3 {
+	font-family: "Merienda";
+    font-size: 1vw;
+}
+
+.modal-content p {
+	font-family: "Merienda";
+    font-size: 0.9vw;
+}
+
+.modal-nav {
+	display: block;
+	text-align: center;
+}
+
+.modal-nav button {
+	margin: 2%;
+	background-color: var(--light-green); /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-family: "Merienda";
+	font-size: 16px;
+}
+
+.modal-nav button:hover {
+	cursor: pointer;
+}
+
+.heading {
+	border-top: 2px solid var(--light-green);
+	border-bottom: 2px solid var(--light-green);
+	text-align: center;
+}
+
+.sub-heading {
+	padding-top: 2%;
+	padding-bottom: 2%;
+	text-decoration: underline;
+	text-decoration-color: var(--light-green);
+}
+
+/* The close Button */
+.close {
+	color: #AAAAAA;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
 	color: black;
 	text-decoration: none;
+	cursor: pointer;
 }
 
-a.content-button:focus,
-a.content-button:hover {
-	background: #B51C35;
-	color: #FFFCED;
+/* Gallery */
+/* Position the gallery */
+.gallery {
+	position: relative;
+	margin-top: 3%;
+}
+
+/* Hide the slides by default */
+.slides {
+	display: none;
+	background-color: var(--superlight-green);
+}
+
+.slide-image {
+	display: block;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 1%;
+	padding-bottom: 1%;
+}
+
+.slide-video {
+	display: block;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 1%;
+	padding-bottom: 1%;
+}
+
+/* Next & Prev buttons */
+.prev,
+.next {
+	cursor: pointer;
+	position: absolute;
+	top: 40%;
+	width: auto;
+	padding: 16px;
+	margin-top: -50px;
+	color: black;
+	font-weight: bold;
+	font-size: 20px;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	-webkit-user-select: none;
+}
+
+/* Position the Next button to the right */
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see through */
+.prev:hover,
+.next:hover {
+	background-color:var(--dark-green);
+}
+
+/* Number text */
+.number-text {
+	color:black;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+/* Container for caption */
+.caption-container {
+	text-align: center;
+	background-color: var(--superlight-green);
+	padding: 2px 16px;
+	color: black;
+	border-bottom: 5px solid var(--dark-green);
+}
+
+.row {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	background-color: var(--superlight-green);
+	border-bottom: 5px solid var(--dark-green);
+}
+
+.row::after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+/* 4 Images */
+.column-ece498 {
+	position: relative;
+	float: left;
+	margin-left: 0.5%;
+	margin-right: 0.5%;
+	margin-top: auto;
+	margin-bottom: auto;
+	padding-top: 0.5%;
+	width: 20%;
+}
+
+/* 1 Image, 4 videos */
+.column-me495 {
+	position: relative;
+	float: left;
+	margin-left: 0.5%;
+	margin-right: 0.5%;
+	margin-top: auto;
+	margin-bottom: auto;
+	padding-top: 0.5%;
+	width: 15%;
+}
+
+/* Add a transparency effect for thumbnail images */
+.gallery-demo {
+	opacity: 0.6;
+}
+
+.active,
+.gallery-demo:hover {
+	opacity: 1;
+}
+
+.demo-poster {
+	z-index: 1;
+}
+
+.demo-cover {
+	margin: auto;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	opacity: 0.8;
+	position: absolute;
+	z-index: 2;
+}
+
+.demo-caption {
+	display: none;
 }
 
 /*--------------------------------------------------------------
 Footer styles
 --------------------------------------------------------------*/
 .footer {
-	margin-top: 27em;
-  padding: 3em 3em 0;
-  background: hsl(0, 0%, 10%);
-  color: #FFFCED;
+	margin: 0 auto;
+	padding: 3em 3em 0;
+	background: hsl(0, 0%, 10%);
+	color: #FFFCED;
 	text-align: center;
 }
 
@@ -446,10 +565,14 @@ Footer styles
   }
 }
 
+/*--------------------------------------------------------------
+Social navigation Bar
+--------------------------------------------------------------*/
 .social-nav {
   margin: 4em -3em 0;
-  padding: 20px;
-  background: #B51C35;
+  padding: 30px;
+  /* background: #B51C35; */
+  background: var(--light-green);
 }
 
 .social-nav ul {
