--- a/CSS/home_style.css
+++ b/CSS/home_style.css
@@ -158,7 +158,7 @@ body{
 .projects-container {
 	margin: 0 auto;
 	max-width: 80%;
-	height: 100vh;
+	height: 130vh;
 	padding-top: 5%;
 	display: inline-block;
 }
@@ -472,6 +472,18 @@ Modal box styles
 	width: 25%;
 }
 
+/* 7 images */
+.column-me315 {
+	position: relative;
+	float: left;
+	margin-left: 0.5%;
+	margin-right: 0.5%;
+	margin-top: auto;
+	margin-bottom: auto;
+	padding-top: 0.5%;
+	width: 10%;
+}
+
 /* 4 Images */
 .column-ece498 {
 	position: relative;
@@ -551,7 +563,7 @@ Footer styles
 }
 
 .footer-widgets a:hover {
-  background: #B51C35;
+  background: var(--light-green);
   cursor: pointer;
 }
 
@@ -568,7 +580,7 @@ Footer styles
 }
 
 .footer-widgets textarea:focus {
-	border: 5px solid #B51C35;
+	border: 5px solid var(--light-green);
 }
 
 @media screen and (min-width: 50em) {
