--- a/CSS/home_style.css
+++ b/CSS/home_style.css
@@ -162,7 +162,7 @@ body{
 .projects-container {
 	margin: 0 auto;
 	max-width: 90%;
-	height: 130vh;
+	height: 150vh;
 	padding-top: 5%;
 	display: block;
 }
@@ -217,7 +217,7 @@ body{
 	background-repeat: no-repeat;
 	background-size: cover;
 
-	/* overflow: hidden; */
+	overflow: hidden;
 }
 
 .project-demo:after {
@@ -254,7 +254,7 @@ body{
 	margin-bottom: 2%;
 	/* font-family: "Arial"; */
 	/* font-family: "Merienda"; */
-    font-size: 24px;
+    font-size: 18px;
 	text-align: left;
 }
 
@@ -265,7 +265,7 @@ body{
 	background-color: var(--tag-green);
 	font-family: "Arial";
 	/* font-family: "FZShuTi"; */
-    font-size: 15px;
+    font-size: 10px;
 	float: left;
 	text-align: center;
 	/* border-radius: 15%; */
@@ -276,7 +276,7 @@ body{
 	display: block;
 	/* font-family: "FZShuTi"; */
 	/* font-family: "Arial"; */
-	font-size: 15px;
+	font-size: 8px;
 	color: #000000;
 	visibility: visible;
 	-webkit-user-select: none;
@@ -480,7 +480,7 @@ Modal box styles
 }
 
 /* 1 Image, 4 videos */
-.column-me495 {
+.column-me495f {
 	position: relative;
 	float: left;
 	margin-left: 0.5%;
