--- a/CSS/home_style.css
+++ b/CSS/home_style.css
@@ -479,6 +479,18 @@ Modal box styles
 	clear: both;
 }
 
+/* 1 videos, 1 images */
+.column-mfp {
+	position: relative;
+	float: left;
+	margin-left: 0.5%;
+	margin-right: 0.5%;
+	margin-top: auto;
+	margin-bottom: auto;
+	padding-top: 0.5%;
+	width: 20%;
+}
+
 /* 2 videos, 3 images */
 .column-me499 {
 	position: relative;
@@ -512,7 +524,7 @@ Modal box styles
 	margin-top: auto;
 	margin-bottom: auto;
 	padding-top: 0.5%;
-	width: 25%;
+	width: 20%;
 }
 
 /* 1 video */
@@ -524,7 +536,7 @@ Modal box styles
 	margin-top: auto;
 	margin-bottom: auto;
 	padding-top: 0.5%;
-	width: 25%;
+	width: 20%;
 }
 
 /* 7 images */
